css/styles.css
/* ... */
.ht-name {
  font-weight: 600;
  font-size: clamp(var(--fs-head), 8vw, var(--fs-title));
  color: var(--lightest-slate);
  margin-bottom: -0.4rem;
}

.ht-desc {
  /* font-size: clamp(var(--fs-md), 100vw, var(--fs-lg)); */
  margin: 1.5rem 0 1.5rem 0;
  font-size: clamp(var(--fs-sm), 2vw, var(--fs-md));
  max-width: 584px;
}

.ht-btn {
  position: relative;
  --fs-custom: var(--fs-md);
}

.ht-btn,
.btn-arrow {
  transition: all var(--normal) var(--easeOutSine);
}

.btn-arrow {
  z-index: -1;
  opacity: 0;
  width: 40px;
  height: 16px;
  position: absolute;
  left: 100%; top: 35%; bottom: 0;
  transform: translateX(-20px);
  pointer-events: none;
}

.ht-btn:hover {
  background-color: var(--blue-tint);
}

.ht-btn:hover .btn-arrow {
  opacity: 1;
  transform: translateX(10px);
}

/* ============= Mini Solar System ============= */
/* Inspired/Kudos by/to: https://codepen.io/delvignefred/pen/ZEKyjeo?editors=1100 */
.mini-system {
  --gap: 0;
  justify-content: center;
  transform-origin: center;
  position: relative;
  transform: skew(-45deg);
  width: var(--mini-sys-size);
  height: var(--mini-sys-size);
}

.mini-system .sun {
  position: absolute;
  transform: skew(45deg);
  width: var(--sun-size);
  height: var(--sun-size);
  border-radius: 50%;
  background: linear-gradient(135deg, var(--blue) 20%, var(--blue-tint) 100%);
  filter: drop-shadow(0 0 2rem var(--blue-alt)) blur(1px);
}

.planets {
  --gap: 0;
  justify-content: center;
  width: var(--planets-size);
  height: var(--planets-size);
  position: relative;
}

.planets .mercury,
.planets .venus,
.planets .earth {
  --gap: 0;
  justify-content: center;
  position: absolute;
  border: 2px;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--planets-theme);
  background-color: transparent;
  animation-name: rotation !important;
  animation-timing-function: linear !important;
  animation-iteration-count: infinite !important;
}

.planets .mercury {
  top: var(--mercury-top);
  width: var(--mercury-size);
  height: var(--mercury-size);
  animation-duration: var(--mercury-rotation-time) !important;
}

.planets .venus {
  top: var(--venus-top);
  width: var(--venus-size);
  height: var(--venus-size);
  animation-duration: var(--venus-rotation-time) !important;
}

.planets .earth {
  top: var(--earth-top);
  width: var(--earth-size);
  height: var(--earth-size);
  animation-duration: var(--earth-rotation-time) !important;
}

.planets .mercury::after,
.planets .venus::after,
.planets .earth::after {
  content: '';
  width: 40%;
  height: 40%;
  border-radius: 50%;
  background-color: var(--blue);
}

.planets .earth::after {
  animation-name: blinking-earth !important;
  animation-duration: 2s !important;
  animation-timing-function: linear !important;
  animation-iteration-count: infinite !important;
}

.planets .mercury-orbit,
.planets .venus-orbit,
.planets .earth-orbit {
  position: absolute;
  border: 2px;
  border-radius: 50%;
  border-style: solid;
  border-color: var(--paths-theme);
  animation-name: revolution !important;
  animation-timing-function: linear !important;
  animation-iteration-count: infinite !important;
}

.planets .mercury-orbit {
  width: var(--mercury-orbit-size);
  height: var(--mercury-orbit-size);
  animation-duration: var(--mercury-revolution-time) !important;
}

.planets .venus-orbit {
  width: var(--venus-orbit-size);
  height: var(--venus-orbit-size);
  animation-duration: var(--venus-revolution-time) !important;
}

.planets .earth-orbit {
  width: var(--earth-orbit-size);
  height: var(--earth-orbit-size);
  animation-duration: var(--earth-revolution-time) !important;
}

@keyframes revolution {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes blinking-earth {
  0% {
    background-color: var(--blue);
    filter: drop-shadow(0 0 0.3rem var(--blue-alt)) blur(0.5px);
  }

  100% {
    background-color: var(--violet);
    filter: drop-shadow(0 0 0.3rem var(--blue-alt)) blur(0);
  }
}

@media screen and (max-width: 1300px) {
  .home {
    flex-direction: column;
  }

  .mini-system {
    order: -1;
  }
}

@media screen and (max-width: 768px) {
  .home-text {
    padding-top: 15%;
  }

  .mini-system {
    order: 0;
  }
}

/* =================== About =================== */
.about {
  --gap: 3rem;
}

.about-box {
  --gap: 2rem;
  flex-direction: row;
  justify-content: center;
  --align-flex: flex-start;
}

.about-text {
  --gap: 1rem;
  flex-direction: column;
  font-size: clamp(var(--fs-md), 2vw, var(--fs-lg));
  text-align: center;
  max-width: 60%;
}

.about-img {
  margin-top: 7px; /* Just for satisfying my ocd */
}

@media screen and (max-width: 768px) {
  .about-box {
    flex-direction: column;
    --align-flex: center;
  }

  .about-text {
    max-width: none;
  }
}

/* =================== Skills =================== */
.skills {
  --gap: 5rem;
}

.skills-box {
  display: grid;
  gap: 1rem;
  row-gap: 1.25rem;
  grid-template-columns: repeat(6, 1fr);
  place-items: center;
}

.card {
  --gap: 1rem;
  flex-direction: column;
  justify-content: center;
  width: clamp(70px, 12vw, 125px);
  height: clamp(70px, 12vw, 125px);
  border-radius: var(--card-radius);
  cursor: pointer; /* Gives you the hand cursor pointer */
  user-select: none; /* Makes the card & all of its children unselectable by the user */
}

.card,
.card * {
  transition: all var(--normal) var(--easeOutSine);
}

.card svg {
  width: clamp(30px, 4vw, 40px);
  height: clamp(30px, 4vw, 40px);
  color: var(--slate);
  transform: translateY(50%);
  opacity: 0.5;
}

.card p {
  opacity: 0;
  transition-delay: 0.05s;
  font-size: clamp(var(--fs-xs), 2vw, var(--fs-md));
  transform: translateY(-50%) scaleY(0.5);
}

.card:hover {
  transform: translateY(-5px);
  box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 1);
}
/* ... */

